--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div>
-            <form th:action="/logout" method="post">
+            <form action="/logout" method="post">
                 <input type="hidden" name="_csrf" value={{_csrf.token}} />
                 <input type="submit" value="Sign Out"/>
             </form>
@@ -14,17 +14,16 @@
                 <button type="submit">Добавить</button>
             </form>
         </div>
-        <div>Список заметок</div>
         <form method="post" action="filter">
             <input type="text" name="filter">
             <input type="hidden" name="_csrf" value={{_csrf.token}} />
             <button type="submit">Найти</button>
         </form>
+        <div>Список заметок</div>
         {{#notes}}
         <div>
-            <b>{{id}}</b>
+            <b>{{priority}}</b>
             <span>{{text}}</span>
-            <i>{{priority}}</i>
         </div>
         {{/notes}}
     </body>
